<resources>
    <string name="app_name">Tally Counter</string>
    <string name="website">http://www.ngorham.net</string>
    <string name="play_store">"https://play.google.com/store/apps/details?id=net.ngorham.tallycounter"</string>
    <string name="download_link">Download this app!\nhttps://play.google.com/store/apps/details?id=net.ngorham.tallycounter</string>
    <!-- Action bar -->
    <string name="add_counter">Add Counter</string>
    <string name="edit_counter">Edit Counter</string>
    <string name="delete_counter">Delete</string>
    <string name="reset_counter">Reset</string>
    <string name="rate_us">Rate us!</string>
    <string name="app_share">Share the app!</string>
    <string name="app_about">About</string>
    <!-- DetailActivity -->
    <string name="events">Events</string>
    <!-- Tally view -->
    <string name="add_tally_button">+</string>
    <string name="remove_tally_button">-</string>
    <!-- AlertDialogs -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="hint_name">Name</string>
    <string name="hint_category">Category</string>
    <string name="hint_count">0.0</string>
    <string name="start_count">Starting Count</string>
    <string name="increment_by">Increment By</string>
    <string name="dialog_color">Color</string>
    <string name="current_count">Current Count</string>
    <string name="dialog_message_delete_counter">Are you sure you want to delete this counter?</string>
    <string name="dialog_message_reset_counter">Are you sure you want to reset this counter?</string>
    <string name="app_version">App Version</string>
    <string name="app_version_number">1.0 6/2018</string>
    <string name="author">Author</string>
    <string name="signature">Neil Gorham</string>
</resources>
