<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:id="@+id/app_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textSize="16sp"
        android:textColor="@color/colorAccent" />
    <TextView
        android:id="@+id/app_version_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version_number"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/author_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="16sp"
        android:textColor="@color/colorAccent" />
    <TextView
        android:id="@+id/signature_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signature"
        android:textSize="18sp" />
</LinearLayout>
